# stac-task

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/setup/: action.yml
.github/workflows/: continuous-integration.yml  release.yml
docs/: api.rst  cli.rst  conf.py  example.md  index.rst  requirements.txt  stactask-usage.ipynb
docs/source/: api.rst  conf.py  index.rst  payload.rst  task.rst  usage.rst
examples/: payload.json  rio_stac_task_standalone.py
examples/my-stac-task/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  stac-task-user-guide.md
examples/my-stac-task/src/my_stac_task/: processor.py  task.py
examples/my-stac-task/tests/: test_task.py
examples/my-stac-task/tests/fixtures/payloads/failure/payload1/: in.json
examples/my-stac-task/tests/fixtures/payloads/success/payload1/: in.json  out.json
examples/rio_stac_task/: pyproject.toml
examples/rio_stac_task/src/rio_stac_task/: __init__.py
scripts/: check  format  lint  run-example  run-examples  test
src/stac_task/: __init__.py  _cli.py  _load.py  _payload.py  _registry.py  _task.py  errors.py  models.py  payload.py  task.py  types.py
stactask/: __init__.py  asset_io.py  cli.py  config.py  exceptions.py  logging.py  payload.py  task.py  utils.py
tests/: conftest.py  tasks.py  test_asset_io.py  test_cli.py  test_logging.py  test_models.py  test_payload.py  test_registry.py  test_task.py  test_task_download.py  test_task_fileinfo.py  test_task_upload.py  test_utils.py
tests/data/: indirect.json  passthrough.json  passthrough.py  sentinel2-l2a-j2k-payload.json
tests/fixtures/: sentinel2-items.json  sentinel2-l2a-j2k-items.json  sentinel2-l2a-j2k-payload.json
tests/fixtures/fileinfo/: test_file_2.txt
