[project]
name = "stactask"
version = "0.4.0"
authors = [{ name = "Matthew Hanson", email = "matt.a.hanson@gmail.com" }]
maintainers = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
description = "Class interface for running custom algorithms and workflows on STAC Items"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pystac", "imagery", "raster", "catalog", "STAC"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pystac>=1.6",
    "python-dateutil>=2.7.0",
    "boto3-utils>=0.3.2",
    "fsspec>=2022.8.2",
    "jsonpath_ng>=1.5.3",
    "requests>=2.28.1",
    "s3fs>=2022.8.2",
]

[project.optional-dependencies]
dev = [
    "black~=24.0",
    "codespell~=2.2.5",
    "mypy~=1.8.0",
    "pre-commit~=3.5.0",
    "pytest-cov~=4.1.0",
    "pytest~=8.0",
    "ruff==0.2.1",
    "types-setuptools~=69.0",
]

[project.urls]
Issues = "https://github.com/stac-utils/stactask/issues"
Github = "https://github.com/stac-utils/stac-task"
Changelog = "https://github.com/stac-utils/stac-task/blob/main/CHANGELOG.md"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["boto3utils", "jsonpath_ng.ext", "fsspec"]
ignore_missing_imports = true

[tool.ruff]
select = ["F", "E", "W", "I", "ERA", "RUF"]
