[project]
name = "stactask"
version = "0.5.0"
authors = [{ name = "Matthew Hanson", email = "matt.a.hanson@gmail.com" }]
maintainers = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
description = "Class interface for running custom algorithms and workflows on STAC Items"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["pystac", "imagery", "raster", "catalog", "STAC"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pystac>=1.6",
    "python-dateutil>=2.7.0",
    "boto3-utils>=0.3.2",
    "fsspec>=2022.8.2",
    "stac-asset>=0.3.0",
    "jsonpath_ng>=1.5.3",
    "requests>=2.28.1",
    "s3fs>=2022.8.2",
]

[project.optional-dependencies]
dev = [
    "black~=24.0",
    "codespell~=2.2.5",
    "mypy~=1.9",
    "pre-commit~=3.7",
    "ruff~=0.4.1",
    "types-setuptools~=69.0",
    "boto3-stubs",
]
test = [
    "pytest~=8.0",
    "pytest-cov~=5.0",
    "pytest-env~=1.1",
    "moto~=5.0.5",
]

[project.urls]
Issues = "https://github.com/stac-utils/stactask/issues"
Github = "https://github.com/stac-utils/stac-task"
Changelog = "https://github.com/stac-utils/stac-task/blob/main/CHANGELOG.md"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["boto3utils", "jsonpath_ng.ext", "fsspec"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["F", "E", "W", "I", "ERA", "RUF"]

[tool.pytest.ini_options]
addopts = "-rx -q -s -vvv"
log_cli_level = "INFO"
log_cli = true
markers = ["system", "unit"]
env = [
    "AWS_DEFAULT_REGION=us-west-2",
    "AWS_ACCESS_KEY_ID=foo",
    "AWS_SECRET_ACCESS_KEY=bar",
    "AWS_SESSION_TOKEN=baz",
]
filterwarnings = [
    "ignore::UserWarning:stactask.*:",
]
