[project]
name = "my-stac-task"
version = "0.1.0"
authors = [{ name = "Matthew Hanson", email = "matt.a.hanson@gmail.com" }]
description = "An example STAC task that can be used as a template"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["stac", "workflow", "cirrus"]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "pystac>=1.12.2",
    "stactask>=0.7.0",
]

[project.scripts]
my-stac-task = "my_stac_task.task:MyStacTask.cli"


[tool.mypy]
show_error_codes = true
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
lint.select = ["F", "E", "W", "I", "ERA", "RUF"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
